--- a/index.html
+++ b/index.html
@@ -22,25 +22,23 @@
 		<link
 			href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lato:wght@400;700;900&display=swap"
 			rel="stylesheet" />
-		<title>Startup</title>
+		<title>Jokes</title>
 		<link rel="stylesheet" href="/sass/style.scss" />
 		<script type="module" src="/main.js" defer></script>
 	</head>
-	<nav class="nav">
-		<h1>Home Page</h1>
-		<a href="/about.html">About</a>
-	</nav>
 	<body>
-		<div class="flex">
-			<main class="flex__main">
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-					Illum odio sed, ut perspiciatis vero tempora alias maxime
-					quibusdam quasi praesentium deleniti numquam mollitia itaque
-					provident voluptatibus earum delectus quos non.
+		<nav class="nav">
+			<a href="/about.html">About</a>
+		</nav>
+		<main class="main">
+			<section class="flex">
+				<h1 class="box-shadow-1">Jokes Are Us</h1>
+				<p class="joke" id="joke">
+					Click the button to tell me a joke!
 				</p>
-			</main>
-			<footer>app created by <a href="#">applej1</a></footer>
-		</div>
+				<button id="btn" class="btn">Tell me a Joke</button>
+				<footer>app created by <a href="#">applej1</a></footer>
+			</section>
+		</main>
 	</body>
 </html>
