--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		<link
 			href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lato:wght@400;700;900&display=swap"
 			rel="stylesheet" />
+
 		<title>Jokes</title>
 		<link rel="stylesheet" href="/sass/style.scss" />
 		<script type="module" src="/main.js" defer></script>
@@ -32,7 +33,9 @@
 		</nav>
 		<main class="main">
 			<section class="flex">
-				<h1 class="box-shadow-1">Jokes Are Us</h1>
+				<h1 class="box-shadow">
+					<span class="span">Jokes Are Us</span>
+				</h1>
 				<p class="joke" id="joke">
 					Click the button to tell me a joke!
 				</p>
