--- a/index.html
+++ b/index.html
@@ -28,20 +28,22 @@
 		<script type="module" src="/main.js" defer></script>
 	</head>
 	<body>
-		<nav class="nav">
-			<a href="/about.html">About</a>
-		</nav>
-		<main class="main">
-			<section class="flex">
-				<h1 class="box-shadow">
-					<span class="span">Jokes Are Us</span>
-				</h1>
-				<p class="joke" id="joke">
-					Click the button to tell me a joke!
-				</p>
-				<button id="btn" class="btn">Tell me a Joke</button>
-				<footer>app created by <a href="#">applej1</a></footer>
-			</section>
-		</main>
+		<div class="container">
+			<nav class="nav">
+				<a href="/about.html">About</a>
+			</nav>
+			<main class="main">
+				<section class="flex">
+					<h1 class="box-shadow">
+						<span class="span">Jokes Are Us</span>
+					</h1>
+					<p class="joke" id="joke">
+						Click the button to tell me a joke!
+					</p>
+					<button id="btn" class="btn">Tell me a Joke</button>
+					<footer>app created by <a href="#">applej1</a></footer>
+				</section>
+			</main>
+		</div>
 	</body>
 </html>
