--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<p class="joke" id="joke">
 						Click the button to tell me a joke!
 					</p>
-					<button id="btn" class="btn">Tell me a Joke</button>
+					<button id="btn" class="btn">Get Joke</button>
 					<footer>app created by <a href="#">applej1</a></footer>
 				</section>
 			</main>
